# binary_check

./: Cargo.toml
inputs/: a.out
src/: config.rs  lib.rs  utils.rs
src/check/: func.rs  mod.rs
